--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
-        "create-vite": "^5.1.0"
+        "braces": "^3.0.2",
+        "create-vite": "^5.1.0",
+        "glob-parent": "^5.1.2",
+        "jquery": "^3.7.1",
+        "micromatch": "^4.0.4",
+        "popper.js": "^1.16.1",
+        "request": "^2.88.2",
+        "sweetalert2": "^11.10.3"
     }
 }
